FIX: remove row-gap in footer navigation

--- a/themes/makejames/assets/_body.scss
+++ b/themes/makejames/assets/_body.scss
@@ -95,7 +95,7 @@ footer {
     align-items: flex-start;
     align-content: flex-start;
     flex-flow: column wrap;
-    gap: 30px;
+    column-gap: 40px;
     color: #f9f8f880;
 
     .nav-section {
